css/stylesheet.css
/*** Fonts ***/

@import url('https://fonts.googleapis.com/css?family=Kaushan+Script');
@import url('https://fonts.googleapis.com/css?family=Josefin+Slab');
@import url('https://fonts.googleapis.com/css?family=Montez');

/*** Body ***/
html,
body {
    width: 100%;
    height: 100%;
}

body {
    font-family: 'Josefin Slab','Helvetica Neue', Arial, sans-serif;
    background-color: #282828;
    color: #C9C9C9;
}
/*** Navigation ***/
.navbar-brand {
	font-family: "Kaushan Script";
}
.prime {
	font-family: "Josefin Slab";
	font-size: 1.3em;
	/*font-color: #C9C9C9;*/
}
a {
    color: #FFFFFF;
    -webkit-transition: all .4s;
    -moz-transition: all .4s;
    transition: all .4;
}


/** Header **/
.fancy {
	font-family: "Montez";
	text-transform: none;
	font-size: 3.3em;
	/*padding-top: 25%*/;
}

header {
    position: relative;
    min-height: auto;
    text-align: center;
    color: #fff;
    width: 100%;
    background-image: url('../assets/full-image1.jpg');
    background-position: center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

hr {
    max-width: 80px;
    border-width: 3px;
    opacity: 0.09;
    margin-top: 15px;
    margin-bottom: 15px;
}

header .picture {
    position: relative;
    width: 100%;
    padding: 100px 15px;
    text-align: center;
    z-index: 2;
}
header .picture .one h1 {
    margin-top: 0;
    margin-bottom: 0;
}
header .picture .one p {
    margin-bottom: 50px;
    font-size: 16px;
    font-weight: 300;
    color: rgba(255,255,255,0.7);
}
/*** quotes ***/
.quote {
	background-color: #090909;
	margin: 0;
	padding: 0;
	width: 100%;
}
#inner-quote {
	font-family: "Kaushan Script", Arial;
}



/* NEXUS (portrait and landscape) ----------- */
/* Smartphone (Nexus 4) */
@media screen and (device-width : 384px) and (device-height : 640px) and (-webkit-device-pixel-ratio : 2) and (orientation : portrait){
  header {
    position: relative;
    min-height: 640px;
    text-align: center;
    color: #fff;
    width: 100%;
    background-image: url('../assets/cell-image1.jpg');
    background-position: center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}
.fancy{
	margin: 200px;
	font-size: 3em;
}
.smaller {
	text-transform: none;
/*	padding-bottom: 20%;*/
}
}

@media screen and (device-width: 640px) and (device-height : 384px) and (-webkit-device-pixel-ratio : 2) and (orientation : landscape){
  header {
    position: relative;
    min-height: 384px;
    text-align: center;
    color: #fff;
    width: 100%;
    background-image: url('../assets/cell-image1.jpg');
    background-position: center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}
}

/* Smartphone (Nexus 5 and Nexus 5X) */
@media screen and (device-width : 360px) and (device-height : 640px) {
  header {
    position: relative;
    min-height: 640px;
    text-align: center;
    color: #fff;
    width: 100%;
    background-image: url('../assets/cell-image1.jpg');
    background-position: center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}
}

@media screen and (device-width : 640px) and (device-height : 360px) {
  header {
    position: relative;
    min-height: 384px;
    text-align: center;
    color: #fff;
    width: 100%;
    background-image: url('../assets/cell-image1.jpg');
    background-position: center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}
.fancy {
	font-family: "Montez";
	text-transform: none;
	font-size: 3.2em;
	padding-top: 150px;
}
.fancy{
	margin-top: -175px;
}

.smaller {
	text-transform: none;
	font-size: 1.3em;
/*	padding-bottom: 70%;*/
}
}

/* Smartphone (Nexus 6) (Nexus 6P) */
@media screen and (device-width : 412px) and (device-height : 732px) {
  header {
    position: relative;
    min-height: 732px;
    text-align: center;
    color: #fff;
    width: 100%;
    background-image: url('../assets/cell-image1.jpg');
    background-position: center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}
}

@media screen and (device-width : 732px) and (device-height : 412px) {
  header {
    position: relative;
    min-height: 412px;
    text-align: center;
    color: #fff;
    width: 100%;
    background-image: url('../assets/cell-image1.jpg');
    background-position: center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}
.fancy {
	font-family: "Montez";
	text-transform: none;
	font-size: 3.8em;
	padding-top: 3%;
}
.fancy{
	margin-top: -20px;
}

.smaller {
	font-size: 1.5em;
	text-transform: none;
	padding-bottom: 35%;

}
}

/* Tablet (Nexus 7) */
@media screen and (device-width : 600px) and (device-height : 960px) {
  header {
    position: relative;
    min-height: 960px;
    text-align: center;
    color: #fff;
    width: 100%;
    background-image: url('../assets/cell-image1.jpg');
    background-position: center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}
}
/* ... */

